feat: add compatibility for h2o java 21 + new metrics